--- a/src/pages/Utilitys/UtilityElectricityWater/NepalElectricity/NepalElectricity.scss
+++ b/src/pages/Utilitys/UtilityElectricityWater/NepalElectricity/NepalElectricity.scss
@@ -7,23 +7,37 @@
   background-color: #3182b9;
   .nepal-electricity-text-area {
     font-style: normal;
-    // font-weight: 600;
+    font-weight: 600;
     font-size: 16px;
     line-height: 20px;
     color: #ffffff;
     margin-top: 30px;
+    font-family: "Montserrat";
   }
   .nepal-electricity-authority-wrapper {
-    margin-top: 60px;
+    margin-top: 40px;
     .nepal-button-last {
       float: left;
       margin-top: 40px;
-      width: 100px;
     }
     .last-nepal-submit {
-      float: right;
       width: 100px;
-      margin-top: 40px;
+      margin-left: 5%;
     }
+  }
+}
+.buttonElement {
+  margin-top: 71%;
+  display: flex;
+
+  .btn-elem {
+    width: 120%;
+    font-size: 14px;
+  }
+  .firstButton {
+    margin-left: 0%;
+  }
+  .secondButton {
+    margin-left: 26%;
   }
 }
