--- a/src/components/AccordionForRecharge/AccordionForRecharge.scss
+++ b/src/components/AccordionForRecharge/AccordionForRecharge.scss
@@ -18,6 +18,7 @@
     --border-radius: 8px;
     --background-activated: #004777;
     align-items: center;
+    margin-bottom: 3%;
   }
   .rowclass1 {
     color: #777;
