--- a/src/pages/Utilitys/InternetPayment/InternetPayment.scss
+++ b/src/pages/Utilitys/InternetPayment/InternetPayment.scss
@@ -1,18 +1,21 @@
 .container {
   display: flex;
-  height: 100%;
+  //height: 100%;
   padding-left: 28px;
   padding-right: 28px;
   flex-direction: column;
   background-color: #3182b9;
+  font-family: "Montserrat";
   .InternetPayment-text-area {
+    font-weight: 600;
     font-style: normal;
     font-size: 16px;
     line-height: 20px;
     color: #ffffff;
     margin-top: 30px;
+    font-family: "Montserrat";
   }
-  .InternetPayment-wrapper {
-    margin-top: 20px;
+  .InternetPaymentWrapper {
+    margin-top: 55px;
   }
 }
