--- a/src/components/Shopping/Shopping.scss
+++ b/src/components/Shopping/Shopping.scss
@@ -1,18 +1,22 @@
 .shopping-section {
-  ion-row {
-    margin-top: 10px;
-  }
   .shopping-list-container {
     display: grid;
-    grid-template-columns: auto auto auto auto;
+    grid-template-columns: 10px 10px 10px 10px;
     grid-gap: 10px;
     justify-content: space-between;
     width: 100%;
+    padding: 15px;
+    padding-bottom: 0px;
+
     div {
       text-align: center;
-      padding: 20px 0;
+      display: flex;
+      flex-direction: column;
+      justify-content: center;
+      align-items: center;
       ion-text {
         color: #000000;
+        font-size: 14px;
       }
     }
   }
