--- a/src/components/Utilities/Utilities.scss
+++ b/src/components/Utilities/Utilities.scss
@@ -1,8 +1,22 @@
 .utility-section {
-  ion-row {
-    margin-top: 10px;
-  }
-  ion-text {
-    color: #000000;
+  .utility-section-wrapper {
+    display: grid;
+    grid-template-columns: 10px 10px 10px 10px;
+    grid-gap: 10px;
+    justify-content: space-between;
+    width: 100%;
+    padding: 15px;
+    padding-bottom: 0px;
+    div {
+      text-align: center;
+      display: flex;
+      flex-direction: column;
+      justify-content: center;
+      align-items: center;
+      ion-text {
+        color: #000000;
+        font-size: 14px;
+      }
+    }
   }
 }
