--- a/src/pages/Routes.scss
+++ b/src/pages/Routes.scss
@@ -1,8 +1,3 @@
-body {
-}
 ion-content {
-  font-family: "Montserrat", sans-serif;
-  .inner-scroll scroll-y overscroll {
-    padding: 0px !important;
-  }
+  --keyboard-offset: 0px !important;
 }
