--- a/src/pages/Shopping/ShoppingPage.scss
+++ b/src/pages/Shopping/ShoppingPage.scss
@@ -41,22 +41,25 @@
     justify-content: space-between;
     div {
       width: 60px;
+      margin: 8px;
     }
     overflow-x: scroll;
     ion-card {
       background-color: rgb(255, 255, 255);
-      width: 50px;
-      height: 50px;
+      background-color: white;
+      width: 66px;
+      height: 60px;
       display: flex;
-      justify-content: center;
-      align-items: center;
-      ion-text {
-        font-weight: 600;
-        font-size: 10px;
-        position: absolute;
-        /* bottom: 0px; */
-        right: 16px;
-        top: 45px;
+      ion-card-content {
+        display: flex;
+        width: 100%;
+        justify-content: space-evenly;
+        align-items: center;
+        flex-direction: column;
+        ion-text {
+          font-weight: 600;
+          font-size: 10px;
+        }
       }
     }
   }
