--- a/src/pages/Agent/Agent.scss
+++ b/src/pages/Agent/Agent.scss
@@ -22,10 +22,10 @@
     margin-top: 40px;
   }
   .agent-proceed-button {
-    width: 150px;
+    width: 100%;
     float: inline;
-    margin-top: 40px;
-    margin-left: 25%;
-    margin-bottom: 25px;
+    margin-top: 62px;
+
+    margin-bottom: 10px;
   }
 }
