--- a/src/pages/Bank/Bank.scss
+++ b/src/pages/Bank/Bank.scss
@@ -20,10 +20,9 @@
   }
 
   .bank-proceed-button {
-    width: 150px;
+    width: 100%;
     float: inline;
-    margin-top: 40px;
-    margin-left: 25%;
+    margin-top: 85px;
+    //margin-left: 25%;
   }
 }
- 
