--- a/src/pages/CoOperative/CoOperative.scss
+++ b/src/pages/CoOperative/CoOperative.scss
@@ -23,10 +23,10 @@
     margin-top: 10px;
   }
   .coperative-proceed-button {
-    width: 150px;
+    width: 100%;
     float: inline;
-    margin-top: 40px;
-    margin-left: 25%;
-    margin-bottom: 10%;
+    margin-top: 75px;
+    // margin-left: 25%;
+    margin-bottom: 3%;
   }
 }
