--- a/src/pages/Home/Home.scss
+++ b/src/pages/Home/Home.scss
@@ -1,6 +1,5 @@
 .home-wrapper {
-   
- font-family: "Montserrat";
+  font-family: "Montserrat";
   .balance-check-section {
     display: flex;
     justify-content: center;
@@ -12,7 +11,7 @@
       box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
       font-style: normal;
       font-weight: 500;
-      font-size: 10px;
+      font-size: 12px;
       line-height: 12px;
       display: flex;
       justify-content: center;
@@ -20,7 +19,7 @@
       .balance-wrapper-text {
         font-style: normal;
         font-weight: 500;
-        font-size: 10px;
+        font-size: 14px;
         line-height: 12px;
       }
     }
@@ -89,7 +88,7 @@
         align-items: center;
         width: 100%;
         ion-button {
-          width: 90px;
+          width: 100px;
           height: 20px;
           font-size: 10px;
         }
@@ -110,4 +109,14 @@
     border-right: 50px solid #555;
     border-bottom: 25px solid transparent;
   }
+}
+
+.home-wrapper
+  ion-content
+  .services-options-wrapper
+  .see-more-section
+  ion-button {
+  width: 40%;
+  height: 20px;
+  font-size: 10px;
 }
