--- a/src/pages/Routes.scss
+++ b/src/pages/Routes.scss
@@ -1,6 +1,7 @@
 ion-content {
-  font-family: "Montserrat";
+  --keyboard-offset: 0px !important;
   .inner-scroll scroll-y overscroll {
     padding: 0px !important;
+    --keyboard-offset: 0px !important;
   }
 }
