--- a/src/pages/LoanSection/ApplyPage/ApplyPage.scss
+++ b/src/pages/LoanSection/ApplyPage/ApplyPage.scss
@@ -12,20 +12,28 @@
     font-size: 16px;
     line-height: 20px;
     color: #ffffff;
-    margin-top: 15px;
+    margin-top: 32px;
     font-family: "Montserrat";
   }
   .Loan-ApplyPage-wrapper {
-    margin-top: 50px;
+    margin-top: 8%;
+  }
+  .btn-elem {
+    font-size: 14px;
+    height: 30px;
+  }
+
+  .Button-wrapper-applypage {
+    margin-top: 53%;
     .loan-ApplyPage-Discard {
       float: left;
-      margin-top: 45%;
-      width: 100px;
+      margin-top: 20px;
+      width: 120px;
     }
     .loan-ApplyPage-Apply {
       float: right;
-      width: 100px;
-      margin-top: 45%;
+      width: 120px;
+      margin-top: 20px;
     }
   }
 }
