--- a/src/components/Menu/SideMenu.scss
+++ b/src/components/Menu/SideMenu.scss
@@ -1,3 +1,8 @@
+.side-menu-toobar {
+  --border-width: 0px !important;
+  --border-style: none;
+}
+
 ion-menu {
   --width: 100%;
 }
@@ -26,13 +31,27 @@ ion-menu {
 .menu-content-wrapper {
   background-color: #ffffff;
   height: 100%;
-  padding: 25px;
+  background-color: #ffffff;
+  height: 100%;
+  padding-left: 25px;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  .page-header-text {
+    ion-text {
+      font-size: 1.4rem;
+      font-style: normal;
+      font-weight: bold;
+      color: #000000;
+    }
+  }
   .page-wrapper {
     display: flex;
     justify-content: space-between;
     .profile-icon-wrapper {
       position: absolute;
       right: 30px;
+      top: 30px;
       ion-avatar {
         width: 120px;
         height: 120px;
@@ -44,36 +63,27 @@ ion-menu {
       }
     }
 
-    .page-header-text {
-      font-style: normal;
-      font-weight: bold;
-      font-size: 18px;
-      line-height: 22px;
-      /* identical to box height */
-
-      color: #000000;
-    }
     .fields-wrapper {
       display: flex;
       flex-direction: column;
-      margin: 10px 0px 0px 0px;
       flex-direction: column;
+      padding-top: 10px;
+      padding-left: 0px;
       .label-text {
         font-style: normal;
-        font-weight: 600;
-        font-size: 12px;
+        /* font-weight: 600; */
+        font-size: 1.1rem;
         line-height: 15px;
         color: #000000;
       }
       .label-value {
         font-style: normal;
         font-weight: 500;
-        font-size: 10px;
+        font-size: 0.9rem;
         line-height: 12px;
-
         color: #000000;
-
         opacity: 0.5;
+        margin-top: 10px;
       }
     }
   }
@@ -86,31 +96,35 @@ ion-menu {
   .footer-wrapper {
     margin-top: -10px;
     .version-wrapper .label-text {
-      font-style: normal;
-      font-weight: 600;
+      /* font-weight: 600; */
       font-size: 12px;
       line-height: 15px;
       color: #000000;
       margin-top: 10px;
+      font-style: normal;
+      /* font-weight: 600; */
+      font-size: 1.1rem;
+      line-height: 15px;
+      color: #000000;
     }
     .version-wrapper .label-value {
       font-style: normal;
       font-weight: 500;
-      font-size: 10px;
+      font-size: 0.9rem;
       line-height: 12px;
       color: #000000;
       opacity: 0.5;
+      margin-top: 10px;
     }
   }
   .action-button {
     font-weight: 600;
-    font-size: 12px;
+    font-size: 1.1rem;
     line-height: 15px;
     background-color: transparent;
     color: #000000;
-    padding: 0px;
+    padding: 16px;
     width: 100%;
-    padding-top: 20px;
     text-align: left;
     padding-left: 0px;
     outline: none;
@@ -118,11 +132,13 @@ ion-menu {
       outline: 0;
     }
   }
+  .bottom-wrapper {
+    padding-bottom: 10px;
+  }
 }
 
 .menu-content-wrapper .action-items-wrapper {
   margin-top: -10px;
-  margin-bottom: 16px;
 }
 
 .menu-content-wrapper .page-wrapper {
