--- a/src/pages/Home/Home.scss
+++ b/src/pages/Home/Home.scss
@@ -53,6 +53,7 @@
         height: 100%;
         background-color: #ffff;
         border-radius: 30px 30px 0px 0px;
+        padding: 10px;
         .close-bar-icon {
           display: flex;
           justify-content: center;
