--- a/src/pages/Bank/Bank.scss
+++ b/src/pages/Bank/Bank.scss
@@ -20,9 +20,15 @@
   }
 
   .bank-proceed-button {
-    width: 100%;
     float: inline;
+    display: flex;
     margin-top: 85px;
-    //margin-left: 25%;
+    .clear-button {
+      width: 70%;
+    }
+    .procced-button {
+      margin-left: 10%;
+      width: 70%;
+    }
   }
 }
