--- a/src/pages/Home/Home.scss
+++ b/src/pages/Home/Home.scss
@@ -44,7 +44,9 @@
     .services-options-wrapper {
       position: absolute;
       bottom: 0px;
-      height: 350px;
+      //height: 355px;
+      height: 340px;
+      padding-top: 0px;
       transition: height 0.25s ease-in;
       width: 100%;
       max-height: 600px;
@@ -87,6 +89,7 @@
         display: flex;
         justify-content: center;
         align-items: center;
+        margin-top: -15px;
         width: 100%;
         ion-button {
           width: 100px;
@@ -120,4 +123,12 @@
   width: 40%;
   height: 20px;
   font-size: 10px;
+}
+
+.ion-padding md button button-solid ion-activatable ion-focusable hydrated {
+  width: 220px;
+  --background: rgb(0, 71, 119);
+  font-size: 16px;
+  /* --padding: -64px; */
+  padding-bottom: 26px;
 }
