--- a/src/pages/Shopping/ShoppingPage.scss
+++ b/src/pages/Shopping/ShoppingPage.scss
@@ -26,6 +26,7 @@
   }
   .search-area-wrapper {
     padding: 30px;
+    margin-top: -25px;
     ion-input {
       --placeholder-color: #ffffff;
       --color: #ffffff;
@@ -50,6 +51,8 @@
       width: 66px;
       height: 60px;
       display: flex;
+      margin-left: 18px;
+
       ion-card-content {
         display: flex;
         width: 100%;
@@ -65,6 +68,7 @@
   }
   .mobile-items-wrapper {
     padding: 20px;
+    margin-top: -38px;
     .item-wrapper {
       display: flex;
       justify-content: center;
@@ -108,4 +112,14 @@
       right: 0px;
     }
   }
+}
+
+.shopping-heading-text-area {
+  font-weight: 600;
+  display: flex;
+  padding-left: 30px;
+  margin-top: 12px;
+  color: #ffffff;
+  margin-left: -1%;
+  font-size: 16px;
 }
