--- a/src/pages/Utilitys/UtilityAntivirus/AntivirusPayment/AntivirusPayment.scss
+++ b/src/pages/Utilitys/UtilityAntivirus/AntivirusPayment/AntivirusPayment.scss
@@ -11,30 +11,31 @@
     font-size: 16px;
     line-height: 20px;
     color: #ffffff;
-    margin-top: 30px;
+    margin-top: -4%;
   }
   .antivirus-payment-wrapper {
-    margin-top: 60px;
+    margin-top: 10%;
     .AntivirusPayment-OrderDetails {
       font-style: normal;
       font-weight: 600;
-      margin-top: 45px;
+      margin-top: 15%;
       font-size: 16px;
       line-height: 20px;
       color: #ffffff;
+      margin-left: 0%;
     }
   }
   .AntivirusPayment-spersky {
     font-style: normal;
     font-weight: normal;
     margin-top: 10px;
-    margin-left: 10px;
+    margin-left: 0px;
     font-size: 12px;
     line-height: 15px;
     /* identical to box height */
     color: #ffffff;
   }
   .antivirus-confirm-button {
-    margin-top: 40px;
+    margin-top: 85%;
   }
 }
