--- a/src/components/Accordion/Accordion.scss
+++ b/src/components/Accordion/Accordion.scss
@@ -7,12 +7,11 @@
   //  margin-left: 30%;
   // }
 
-  .ionmargin{
+  .ionmargin {
     display: flex;
     justify-content: space-around;
   }
   ion-button {
-
     height: 31px;
     --background: #004777;
     box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
@@ -20,15 +19,14 @@
     --background-activated: #004777;
     align-items: center;
   }
-  .rowclass1{
-    color:#777;
-    
+  .rowclass1 {
+    color: #777;
   }
-  .rowclass2{
-    color:rgb(7, 7, 7);
+  .rowclass2 {
+    color: rgb(7, 7, 7);
     font-weight: 600;
   }
-  ion-row{
+  ion-row {
     display: flex;
     justify-content: space-around;
     margin-top: 3%;
@@ -37,10 +35,11 @@
   }
 
   .is-shown {
-    width: 100%;
     background-color: #ffffff;
     border-radius: 8px;
-    height: 150px;
+    height: 100px;
+    position: relative;
+    top: -8px;
     transition: height 0.25s ease-in;
   }
   .is-hidden {
@@ -49,6 +48,6 @@
     width: 100%;
   }
 }
-.button-inner{
+.button-inner {
   justify-content: none;
 }
