--- a/src/pages/Utilitys/UtilityFlightBooking/FlightOneWay/FlightOneWay.scss
+++ b/src/pages/Utilitys/UtilityFlightBooking/FlightOneWay/FlightOneWay.scss
@@ -1,148 +1,23 @@
-.container {
-  margin-top: -24px;
-  display: flex;
-  height: 100%;
-  padding-left: 28px;
-  padding-right: 28px;
-  flex-direction: column;
-  background-color: #3182b9;
-  font-family: "Montserrat";
-  margin-top: 4%;
-  .booking-oneWay-text-area {
-    font-style: normal;
+.flight-booking-container {
+  ion-text {
     font-weight: 600;
     font-size: 16px;
-    line-height: 20px;
-    color: #ffffff;
-    font-family: "Montserrat";
-    margin-top: 10%;
-  }
-
-  .booking-oneWay-wrapper {
-    .booking-section {
-      display: flex;
-      width: 100%;
-      .select-text {
-        flex: 1 1 0%;
-        min-width: 100%;
-        font-size: inherit;
-        text-overflow: ellipsis;
-        white-space: nowrap;
-        // overflow: hidden;
-      }
-    }
-    // .booking-from {
-    //   display: flex;
-    //   width: 100%;
-
-    //   .select-text {
-    //     flex: 1 1 0%;
-    //     min-width: 100%;
-    //     font-size: inherit;
-    //     text-overflow: ellipsis;
-    //     white-space: nowrap;
-    //     // overflow: hidden;
-    //   }
-    // }
-    .flight-icon {
-      display: flex;
-      margin-right: 5px;
-    }
-    .booking-to {
-      display: flex;
-      width: 100%;
-    }
-  }
-
-  .departure-area {
-    display: inline-block;
-    width: 100;
-  }
-
-  .toggelButton {
-    color: white;
-  }
-}
-
-.allwidth {
-  width: "65%";
-}
-
-.toggle-inner {
-  --handle-background: red;
-}
-
-.container .bookingButtonForFlight {
-  margin-top: 36%;
-}
-
-.container {
-  display: flex;
-  height: 100%;
-  padding-left: 28px;
-  padding-right: 28px;
-  flex-direction: column;
-  background-color: #3182b9;
-  font-weight: 600;
-  font-family: "Montserrat";
-  .booking-twoWay-text-area {
-    font-style: normal;
-    // font-weight: 600;
-    font-size: 16px;
-    line-height: 20px;
-    color: #ffffff;
+    padding-left: 45px;
+    /* top: 0px; */
+    /* top: 100px; */
     margin-top: 30px;
-    margin-top: 10%;
+    color: #ffffff;
+    /* padding-top: 30px; */
+    /* margin-top: 0px; */
+    position: absolute;
   }
-  .booking-twoWay-wrapper {
-    margin-top: 60px;
-    .booking-twoWay-section {
-      display: flex;
-    }
-
-    .booking-twoWay-from {
-      display: flex;
-      width: 100%;
-    }
-    .flight-twoWay-icon {
-      display: flex;
-      margin-right: 5px;
-      margin-top: 25px;
-    }
-    .booking-twoWay-to {
-      display: flex;
-      width: 100%;
-    }
-    .flight-Return {
-      display: flex;
-      width: 100%;
-      .flight-departure {
-        display: flex;
-        width: 100%;
-        margin-right: 20px;
-      }
-      .flight-return {
-        display: flex;
-        margin-left: 20px;
-        width: 100%;
-      }
-    }
+  .toogle-btn {
+    padding: 0px;
+    /* margin-top: 100px; */
+    padding-left: 50px;
+    padding-right: 50px;
+    position: absolute;
+    margin-top: 80px;
+    width: 100%;
   }
-  .departure-twoWay-area {
-    display: inline-block;
-    width: 100;
-  }
-}
-.flightTwoWayButton {
-  margin-top: 35%;
-}
-
-.container .bookingButtonForFlightTwoWay {
-  margin-top: 36%;
-}
-
-.container .booking-oneWay-wrapper .flight-icon {
-  display: flex;
-  margin-right: 5px;
-  margin-top: 8%;
 }
