--- a/src/pages/Utilitys/UtilityFlightBooking/FlightOneWay/FlightOneWay.scss
+++ b/src/pages/Utilitys/UtilityFlightBooking/FlightOneWay/FlightOneWay.scss
@@ -2,22 +2,48 @@
   ion-text {
     font-weight: 600;
     font-size: 16px;
-    padding-left: 45px;
-    /* top: 0px; */
-    /* top: 100px; */
-    margin-top: 30px;
     color: #ffffff;
-    /* padding-top: 30px; */
-    /* margin-top: 0px; */
-    position: absolute;
+    // position: absolute;
   }
-  .toogle-btn {
-    padding: 0px;
-    /* margin-top: 100px; */
-    padding-left: 50px;
-    padding-right: 50px;
-    position: absolute;
-    margin-top: 80px;
+
+  .flight-booking-oneWay-text-area {
+    padding-left: 25px;
+  }
+  .toggle-button {
     width: 100%;
+    padding: 25px;
+    margin-top: 35px;
+  }
+
+  .flight-booking-oneWay-wrapper {
+    padding: 25px;
+    margin-top: -32px;
+
+    .flight-one-way-button {
+      margin-top: 106px;
+    }
+  }
+  .flight-booking-section {
+    display: flex;
+
+    .flight-Booking-icon {
+      margin-top: 40px;
+    }
+  }
+
+  .flight-booking-TwoWay-wrapper {
+    padding: 25px;
+    margin-top: -32px;
+
+    .flight-two-way-button {
+      margin-top: 106px;
+    }
+  }
+
+  .flight-booking-twoWay-section {
+    display: flex;
+    .flight-twoWay-icon {
+      margin-top: 40px;
+    }
   }
 }
