Antivirus page css setup

--- a/src/pages/Utilitys/UtilityAntivirus/Antivirus/Antivirus.scss
+++ b/src/pages/Utilitys/UtilityAntivirus/Antivirus/Antivirus.scss
@@ -1,4 +1,4 @@
-.container {
+.antivirus-container {
   display: flex;
   height: 100%;
   padding-left: 28px;
@@ -12,10 +12,10 @@
     color: #ffffff;
     margin-top: 30px;
   }
-  .antivirus-wrapper {
-    margin-top: 20px;
+  .antivirus-btn-wrapper {
+    margin-top: 0px;
   }
-  .antivirus-btn {
+  .antivirus-proceed-btn {
     margin-top: 30px;
   }
 }
