--- a/src/components/AccordionForRecharge/AccordionForRecharge.scss
+++ b/src/components/AccordionForRecharge/AccordionForRecharge.scss
@@ -1,4 +1,4 @@
-.accordion-wrapper {
+.accordion-for-recharge-wrapper {
   display: flex;
   flex-direction: column;
   justify-content: none;
@@ -35,14 +35,14 @@
     font-size: 15px;
   }
 
-  .is-shown {
+  .is-shown-recharge {
     width: 100%;
     background-color: #ffffff;
     border-radius: 8px;
     height: 150px;
     transition: height 0.25s ease-in;
   }
-  .is-hidden {
+  .is-hidden-recharge {
     height: 0px;
     transition: height 0.25s ease-out;
     width: 100%;
@@ -51,7 +51,7 @@
 .button-inner {
   justify-content: none;
 }
-.inputArea {
+.recharge-input-area {
   margin-left: 20px;
   margin-right: 20px;
   font-size: 12px;
