--- a/src/pages/Bank/Bank.scss
+++ b/src/pages/Bank/Bank.scss
@@ -1,4 +1,4 @@
-.container {
+.bank-container {
   display: flex;
   display: flex;
   height: 100%;
@@ -23,7 +23,7 @@
     float: inline;
     display: flex;
     margin-top: 85px;
-    .clear-button {
+    .clear-button-for-bank {
       width: 70%;
     }
     .procced-button {
