--- a/src/pages/Utilitys/UtilityInsuranceFinanceEmi/RoyalitySavingCredit/RoyalitySavingCredit.scss
+++ b/src/pages/Utilitys/UtilityInsuranceFinanceEmi/RoyalitySavingCredit/RoyalitySavingCredit.scss
@@ -1,4 +1,4 @@
-.container {
+.saving-credit-container {
   display: flex;
   height: 100%;
   padding-left: 28px;
@@ -16,7 +16,7 @@
     font-family: "Montserrat";
   }
   .royalitySaving-wrapper {
-    margin-top: 32px;
+    margin-top: 5px;
 
     .royalitySavingButton {
       margin-top: 40px;
