--- a/src/pages/Fund/Fund.scss
+++ b/src/pages/Fund/Fund.scss
@@ -1,22 +1,21 @@
-.container {
-  display: flex;
+.fund-container {
   display: flex;
   height: 100%;
   flex-direction: column;
   background-color: #3182b9;
   font-family: "Montserrat";
+  padding: 25px;
   .fund-text-area {
-    margin-top: 20px;
+    margin-top: 40px;
     font-style: normal;
     font-size: 16px;
     line-height: 20px;
     color: #ffffff;
     font-weight: 600;
-    padding-left: 6px;
+    padding-left: 12px;
   }
   .fund-wrapper {
     padding: 8px;
     margin-top: 80px;
   }
 }
- 
