--- a/src/pages/Utilitys/UtilityFlightBooking/FlightOneWay/FlightOneWay.scss
+++ b/src/pages/Utilitys/UtilityFlightBooking/FlightOneWay/FlightOneWay.scss
@@ -1,4 +1,5 @@
 .flight-booking-container {
+  margin-top: 40px;
   ion-text {
     font-weight: 600;
     font-size: 16px;
@@ -9,9 +10,9 @@
   .flight-booking-oneWay-text-area {
     padding-left: 25px;
   }
-  .toggle-button {
+  .toggle-button-for-flight {
     width: 100%;
-    padding: 25px;
+    padding: 20px;
     margin-top: 35px;
   }
 
@@ -20,14 +21,14 @@
     margin-top: -32px;
 
     .flight-one-way-button {
-      margin-top: 106px;
+      margin-top: 80px;
     }
   }
   .flight-booking-section {
     display: flex;
 
     .flight-Booking-icon {
-      margin-top: 40px;
+      margin-top: 30px;
     }
   }
 
@@ -36,14 +37,14 @@
     margin-top: -32px;
 
     .flight-two-way-button {
-      margin-top: 106px;
+      margin-top: 85px;
     }
   }
 
   .flight-booking-twoWay-section {
     display: flex;
     .flight-twoWay-icon {
-      margin-top: 40px;
+      margin-top: 30px;
     }
   }
 }
