--- a/src/pages/Utilitys/UtilityAntivirus/Antivirus/Antivirus.scss
+++ b/src/pages/Utilitys/UtilityAntivirus/Antivirus/Antivirus.scss
@@ -4,7 +4,7 @@
   padding-left: 28px;
   padding-right: 28px;
   flex-direction: column;
-  background-color: #3182b9;
+  // background-color: #3182b9;
   .antivirus-text-area {
     font-style: normal;
     font-size: 16px;
@@ -13,7 +13,7 @@
     margin-top: 30px;
   }
   .antivirus-btn-wrapper {
-    margin-top: 0px;
+    margin-top: 50px;
   }
   .antivirus-proceed-btn {
     margin-top: 30px;
