--- a/src/components/Radio/Radio.scss
+++ b/src/components/Radio/Radio.scss
@@ -3,11 +3,12 @@
     font-family: "Montserrat";
   }
   ion-radio {
-    --color-checked: #ffffff;
+    --color-checked: #3182b9;
+
     width: 20px;
   }
   .ion-margin-start {
-    color: #ffffff;
+    color: black;
     font-size: 14px;
   }
 }
