--- a/src/pages/LoanSection/ApplyPage/ApplyPage.scss
+++ b/src/pages/LoanSection/ApplyPage/ApplyPage.scss
@@ -14,14 +14,15 @@
     font-family: "Montserrat";
   }
   .Loan-ApplyPage-wrapper {
-    margin-top: 15px;
+    margin-top: 40px;
   }
 
   .bottom-btn-wrapper {
+    margin-top: 185px;
     display: flex;
     justify-content: space-around;
     position: absolute;
-    bottom: 20px;
+    //bottom: 20px;
     width: 100%;
     left: 0;
     right: 0;
