--- a/src/pages/LoanSection/LoanType/LoanType.scss
+++ b/src/pages/LoanSection/LoanType/LoanType.scss
@@ -13,13 +13,15 @@
     font-family: "Montserrat";
   }
   .loan-type-wrapper {
-    margin-top: 100px;
+    margin-top: 30px;
   }
   .loanType-btn {
     position: absolute;
     bottom: 10px;
     width: 100%;
-    padding: 30px;
+    padding-top: 30px;
+    padding-right: 30px;
+    padding-left: 30px;
     left: 0;
     right: 0;
   }
