--- a/src/pages/Shopping/ShoppingPage.scss
+++ b/src/pages/Shopping/ShoppingPage.scss
@@ -40,6 +40,8 @@
   .scroll-items-wrapper {
     display: flex;
     justify-content: space-between;
+
+    margin-right: 5px;
     div {
       width: 60px;
       margin: 8px;
@@ -59,10 +61,15 @@
         justify-content: space-evenly;
         align-items: center;
         flex-direction: column;
+        margin-right: 20px;
         ion-text {
           font-weight: 600;
           font-size: 10px;
         }
+      }
+
+      .card-content-ios {
+        padding-bottom: 5px;
       }
     }
   }
