antivirus problem resolved

--- a/src/components/AccordionForAntivirus/AccordionForAntivirus.scss
+++ b/src/components/AccordionForAntivirus/AccordionForAntivirus.scss
@@ -37,7 +37,8 @@
     border-radius: 8px;
     transition: height 0.25s ease-in;
     overflow: scroll;
-    height: 450px;
+    // height: 450px;
+    height: 225px;
   }
   .is-hidden {
     height: 0px;
