adding update cart,show cart details,remove item from cart api implementation

--- a/src/pages/Cart/CartPage.scss
+++ b/src/pages/Cart/CartPage.scss
@@ -34,6 +34,8 @@
         line-height: 12px;
         color: #000000;
         opacity: 0.5;
+        position: absolute;
+        bottom: 35px;
       }
       .item-price {
         font-weight: 500;
