--- a/src/pages/ShoppingItemDetails/ItemDetailsPage.scss
+++ b/src/pages/ShoppingItemDetails/ItemDetailsPage.scss
@@ -46,7 +46,7 @@
         font-size: 10px;
         line-height: 12px;
         color: #000000;
-        opacity: 0.5;
+        //opacity: 0.5;
         background-color: #ffffff;
         border: 1px solid grey;
         margin-right: 10px;
@@ -68,7 +68,7 @@
         font-size: 10px;
         line-height: 12px;
         color: #000000;
-        opacity: 0.5;
+        // opacity: 0.5;
         background-color: #ffffff;
         border: 1px solid grey;
         margin-left: 10px;
@@ -105,7 +105,7 @@
     }
     .add-to-cart-button-wrapper {
       .add-cart-button {
-        margin-top: 30px;
+        margin-top: 10px;
         border-radius: 8px;
         --background: #004777;
         height: 31px;
