Rating section added

--- a/src/pages/ShoppingItemDetails/ItemDetailsPage.scss
+++ b/src/pages/ShoppingItemDetails/ItemDetailsPage.scss
@@ -105,7 +105,8 @@
     }
     .add-to-cart-button-wrapper {
       .add-cart-button {
-        margin-top: 10px;
+        //margin-top: 10px;
+        margin-top: 0px;
         border-radius: 8px;
         --background: #004777;
         height: 31px;
