--- a/src/components/Header/Header.scss
+++ b/src/components/Header/Header.scss
@@ -22,4 +22,15 @@
     font-size: 18px;
     font-family: "Montserrat";
   }
+  .cart-count-badge {
+    position: absolute;
+    right: 5px;
+    font-size: 13px;
+    font-weight: 600;
+    border-radius: 10px;
+    /* margin-top: 0px; */
+    background-color: rgb(217, 13, 38);
+    /* padding: 5px; */
+    z-index: 100;
+  }
 }
