--- a/src/pages/Shopping/ShoppingPage.scss
+++ b/src/pages/Shopping/ShoppingPage.scss
@@ -40,36 +40,29 @@
   .scroll-items-wrapper {
     display: flex;
     justify-content: space-between;
-
-    margin-right: 5px;
     div {
       width: 60px;
-      margin: 8px;
+      margin: 0 15px;
     }
     overflow-x: scroll;
     ion-card {
       background-color: rgb(255, 255, 255);
       background-color: white;
-      width: 66px;
-      height: 60px;
+      width: 80px;
       display: flex;
-      margin-left: 18px;
-
       ion-card-content {
         display: flex;
         width: 100%;
         justify-content: space-evenly;
         align-items: center;
         flex-direction: column;
-        margin-right: 20px;
+        padding: 10px;
         ion-text {
           font-weight: 600;
-          font-size: 10px;
+          font-size: 13px;
+          position: relative;
+          bottom: -5px;
         }
-      }
-
-      .card-content-ios {
-        padding-bottom: 5px;
       }
     }
   }
