--- a/src/pages/ShoppingItemDetails/ItemDetailsPage.scss
+++ b/src/pages/ShoppingItemDetails/ItemDetailsPage.scss
@@ -2,7 +2,7 @@
   .services-options-wrapper {
     position: absolute;
     bottom: 0px;
-    height: 250px;
+    height: 265px;
     transition: height 0.25s ease-in;
     width: 100%;
     max-height: 600px;
@@ -28,6 +28,12 @@
     }
     ion-card {
       margin: 0;
+    }
+    .storage-discription-wrapper {
+      display: flex;
+      font-size: 10px;
+      font-weight: 300;
+      margin-top: 10px;
     }
     .storage-details-wrapper {
       display: flex;
